agregada la seccion de reportes

--- a/app/index.html
+++ b/app/index.html
@@ -63,7 +63,7 @@
     <script src="funcionario-dependencia/controllers/fun-dep.js"></script>
     <script src="plaza-dependencia/controllers/asignacion.js"></script>
     <script src="plaza-dependencia/controllers/plaza-dependencia.js"></script>
-
+    <script src="reportes/controllers/reportes.js"></script>
 
     <!--Caga de servicios-->
     <script src="common/services/request-service.js"></script>
