agregado input de archivo en reportes implementado con custom directive fileread

--- a/app/index.html
+++ b/app/index.html
@@ -65,6 +65,9 @@
     <script src="plaza-dependencia/controllers/plaza-dependencia.js"></script>
     <script src="reportes/controllers/reportes.js"></script>
 
+    <!--Caga de directivas-->
+    <script src="common/directives/fileread-directive.js"></script>
+    
     <!--Caga de servicios-->
     <script src="common/services/request-service.js"></script>
     <script src="common/services/notification-service.js"></script>
